<resources>
    <string name="app_name">Android_Project</string>
    <string name="title_activity_menu_options">MenuOptions</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="food_name">Food Name</string>
    <string name="price">Price</string>
    <string name="type">Type</string>
    <string name="MainMeal">Main Dish</string>
    <string name="salad">salad</string>
    <string name="hot_drinks">Hot drinks</string>
    <string name="cold_drinks">Cold drinks</string>
    <string name="image_url">Image URL</string>
    <string name="food_price">Food Price</string>
    <string name="food_type">Food Type</string>
    <string name="add_new_item_to_the_database">Add new item to the database</string>
    <string name="remove_item_from_the_database">remove item from the database</string>
    <string name="yahoo">YAHOO</string>
    <string name="names_sam_eldin_amp_jimmy_mograbi"><![CDATA[Names: Sam Eldin & Jimmy mograbi]]></string>
    <string name="email_address">Email Address:</string>
    <string name="jameelmograbi_gamil_com"><![CDATA[<---jameelmograbi@gamil.com--->]]></string>
    <string name="samheldin_99_gamil_com"><![CDATA[<---samheldin.99@gamil.com--->]]></string>
</resources>