<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:weightSum="5"
    android:orientation="vertical"
    >
    <ImageView
        android:id="@+id/imgBtnFood"
        android:layout_weight="2"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"

        android:contentDescription="@string/yahoo" />
    <TextView
        android:id="@+id/txtItmFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:paddingLeft="10sp"
        android:gravity="fill_vertical"
        android:text="@string/food_name"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/txtItmPrice"
        android:paddingLeft="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/price"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        />

</LinearLayout>