<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MenuOptions">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Android_Project.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Android_Project.PopupOverlay" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabFoodTypes"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabAllTypes"
                android:text="@string/all_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabSalad"
                android:text="@string/salad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabHotDrinks"
                android:text="@string/hot_drinks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabColdDrinks"
                android:text="@string/cold_drinks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        />



    <include layout="@layout/content_main" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/AddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_plus"
        android:contentDescription="@string/add_new_item_to_the_database" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>